--- a/_locales/zh-cn/microIoT-strings.json
+++ b/_locales/zh-cn/microIoT-strings.json
@@ -25,6 +25,7 @@
     "microIoT.showUserNumber|block": "OLED 显示屏 第%line行|显示数字%n",
     "microIoT.showUserText|block": "OLED 显示屏 第%line行|显示文本%text",
     "microIoT.clear|block": "OLED清屏",
-    "microIoT.drawUserLine|block": "OLED画线起点 x1:%x1|y1:%y1| 终点x2:%x2|y2:%y2"
+    "microIoT.drawUserLine|block": "OLED画线起点 x1:%x1|y1:%y1| 终点x2:%x2|y2:%y2",
+    "microIoT.initDisplay|block":"初始化OLED显示屏"
 
 }
