--- a/_locales/zh-cn/microIoT-strings.json
+++ b/_locales/zh-cn/microIoT-strings.json
@@ -14,7 +14,7 @@
     "microIoT.microIoT_MQTT_Event|block": "在 %top |收到消息时运行",
     "microIoT.microIoT_add_topic|block": "新增订阅 %top |: %IOT_TOPIC",
     "microIoT.microIoT_WIFI|block": "WIFI 配置 | Wi-Fi:| 名称: %SSID| 密码:%PASSWORD| 启动连接",
-    "microIoT.microIoT_http_IFTTT|block": "IFTTT设置| even: %EVENT| key:%KEY| ",
+    "microIoT.microIoT_http_IFTTT|block": "IFTTT设置| event: %EVENT| key:%KEY| ",
     "microIoT.microIoT_http_get|block": "http(get) | url %url| 超时(毫秒) %time",
     "microIoT.microIoT_http_put|block": "http(put) | url %url| content %content| 超时(毫秒) %time",
     "microIoT.microIoT_send_ping|block": "发送PING",
@@ -31,5 +31,5 @@
     "microIoT.get_temperature|block": "获取温度",
     "microIoT.get_humidity|block": "获取湿度",
     "microIoT.get_windSpeed|block": "获取风速",
-    "microIoT.Set_location|block": "设置新加坡位置|%location"
+    "microIoT.Set_location|block": "设置新加坡城市|%location"
 }
